fix(table): Fix truncate logic on table body cells

--- a/packages/orion/src/Table/table.css
+++ b/packages/orion/src/Table/table.css
@@ -67,3 +67,7 @@
 .orion.table tbody > tr > td > .inner-cell.highlight {
   @apply bg-gray-900-4;
 }
+
+.orion.table tbody .inner-cell > .inner-cell-wrapper {
+  @apply truncate;
+}
